--- a/compiled/css/style_split_1.css
+++ b/compiled/css/style_split_1.css
@@ -9644,6 +9644,7 @@ button.close {
 
 .header .navbar.navbar-fixed-top .navbar-right .btn-partager {
   margin-top: 14px;
+  position: relative;
 }
 
 .header .dropdown-inverted .dropdown-menu {
