--- a/src/css/less/bootstrap/rules/navbar.less
+++ b/src/css/less/bootstrap/rules/navbar.less
@@ -250,9 +250,9 @@
 
       .btn-partager {
         margin-top: 14px;
+        position: relative;
       }
     }
-    
   }
 
   .dropdown-inverted{
